# invoice-generator

./: .env  .gitignore  Cargo.toml  README.md  compose.yaml  transactions.http
migrations/: 20260406231029_init.down.sql  20260406231029_init.up.sql
src/: config.rs  main.rs
src/server/: database.rs  errors.rs  handler.rs  mod.rs  model.rs  serializes.rs
src/server/models/: transaction.rs
