[package]
name = "invoice-generator-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { version = "0.1.44", features = ["log"]}
tracing-subscriber = { version = "0.3.23", features= [ "env-filter"]}
